--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "tiny-typed-emitter": "^2.1.0",
     "typescript": "^4.9.3"
   }
 }
