--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,29 +7,18 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x, 18.x]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Node.js 16
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run: npm i
+        run: npm ci
       - name: Build
-        run: |
-          npm run build
-          rm -rf .github
-          rm -rf node_modules
-      - name: Publish
-        uses: pascalgn/npm-publish-action@1.3.9
-        with:
-          tag_name: "v%s"
-          tag_message: "v%s"
-          create_tag: "true"
-          commit_pattern: "^Release (\\S+)"
-          workspace: "."
-          publish_command: "npm"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm run build
