--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,44 @@ jobs:
         run: npm i
       - name: Build
         run: npm run build
+  
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Install Dependencies
+        run: npm i
       - name: Release
         uses: softprops/action-gh-release@v1
+  
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs: release
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js 16
+        uses: actions/setup-node@v3
         with:
-          tag_name: ${{ github.ref_name }}
+          node-version: 16
+      - name: Install Dependencies
+        run: npm i
+      - name: Build
+        run: |
+          npm run build
+          rm -rf .github
+          rm -rf node_modules
+      - name: Publish
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
